<resources>
    <string name="app_name">UrbanDict</string>
    <string name="term_placeholder">wat</string>
    <string name="thumbs_up_desc">thumbs_up</string>
    <string name="up_count_placeholder">3693</string>
    <string name="thumbs_down_desc">thumbs_down</string>
    <string name="down_count_placeholder">427</string>
    <string name="definition_placeholder">The only proper response to something that makes absolutely no sense.</string>
    <string name="search_text">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="loading">Loading definitions</string>
    <string name="error">Error: %1$s</string>
</resources>
